syntax = "proto3";

package likechain.likenft;

import "cosmos/nft/v1beta1/nft.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "likechain/likenft/class_input.proto";
import "likechain/likenft/listing.proto";
import "likechain/likenft/mintable_nft.proto";
import "likechain/likenft/nft_input.proto";
import "likechain/likenft/offer.proto";

// this line is used by starport scaffolding # proto/tx/import
option go_package = "github.com/likecoin/likechain/x/likenft/types";

// Msg defines the Msg service.
service Msg {
  rpc NewClass(MsgNewClass) returns (MsgNewClassResponse);
  rpc UpdateClass(MsgUpdateClass) returns (MsgUpdateClassResponse);
  rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);
  rpc BurnNFT(MsgBurnNFT) returns (MsgBurnNFTResponse);
  rpc CreateMintableNFT(MsgCreateMintableNFT) returns (MsgCreateMintableNFTResponse);
  rpc UpdateMintableNFT(MsgUpdateMintableNFT) returns (MsgUpdateMintableNFTResponse);
  rpc DeleteMintableNFT(MsgDeleteMintableNFT) returns (MsgDeleteMintableNFTResponse);
  rpc CreateOffer(MsgCreateOffer) returns (MsgCreateOfferResponse);
  rpc UpdateOffer(MsgUpdateOffer) returns (MsgUpdateOfferResponse);
  rpc DeleteOffer(MsgDeleteOffer) returns (MsgDeleteOfferResponse);
  rpc CreateListing(MsgCreateListing) returns (MsgCreateListingResponse);
  rpc UpdateListing(MsgUpdateListing) returns (MsgUpdateListingResponse);
  rpc DeleteListing(MsgDeleteListing) returns (MsgDeleteListingResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgNewClass {
  string creator = 1;
  ClassParentInput parent = 2 [(gogoproto.nullable) = false];
  ClassInput input = 3 [(gogoproto.nullable) = false];
}

message MsgNewClassResponse {
  cosmos.nft.v1beta1.Class class = 1 [(gogoproto.nullable) = false];
}

message MsgUpdateClass {
  string creator = 1;
  string class_id = 2;
  ClassInput input = 3 [(gogoproto.nullable) = false];
}

message MsgUpdateClassResponse {
  cosmos.nft.v1beta1.Class class = 1 [(gogoproto.nullable) = false];
}

message MsgMintNFT {
  string creator = 1;
  string class_id = 2;
  string id = 3;
  NFTInput input = 4 [(gogoproto.nullable) = true];
}

message MsgMintNFTResponse {
  cosmos.nft.v1beta1.NFT nft = 1 [(gogoproto.nullable) = false];
}

message MsgBurnNFT {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
}

message MsgBurnNFTResponse {}

message MsgCreateMintableNFT {
  string creator = 1;
  string class_id = 2;
  string id = 3;
  NFTInput input = 4 [(gogoproto.nullable) = false];
}

message MsgCreateMintableNFTResponse {
  MintableNFT mintable_nft = 1 [(gogoproto.nullable) = false];
}

message MsgUpdateMintableNFT {
  string creator = 1;
  string class_id = 2;
  string id = 3;
  NFTInput input = 4 [(gogoproto.nullable) = false];
}

message MsgUpdateMintableNFTResponse {
  MintableNFT mintable_nft = 1 [(gogoproto.nullable) = false];
}

message MsgDeleteMintableNFT {
  string creator = 1;
  string class_id = 2;
  string id = 3;
}

message MsgDeleteMintableNFTResponse {}

message MsgCreateOffer {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
  uint64 price = 4;
  google.protobuf.Timestamp expiration = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}
message MsgCreateOfferResponse {
  Offer offer = 1 [(gogoproto.nullable) = false];
}

message MsgUpdateOffer {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
  uint64 price = 4;
  google.protobuf.Timestamp expiration = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}
message MsgUpdateOfferResponse {
  Offer offer = 1 [(gogoproto.nullable) = false];
}

message MsgDeleteOffer {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
}
message MsgDeleteOfferResponse {}

message MsgCreateListing {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
  uint64 price = 4;
  google.protobuf.Timestamp expiration = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}
message MsgCreateListingResponse {
  Listing listing = 1 [(gogoproto.nullable) = false];
}

message MsgUpdateListing {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
  uint64 price = 4;
  google.protobuf.Timestamp expiration = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}
message MsgUpdateListingResponse {
  Listing listing = 1 [(gogoproto.nullable) = false];
}

message MsgDeleteListing {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
}
message MsgDeleteListingResponse {}

// this line is used by starport scaffolding # proto/tx/message
